--- a/index.html
+++ b/index.html
@@ -1,92 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Kalkulator Celcius to Fahrenheit</title>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <!-- Header -->
+    <header>
+      <h1>Kalkulator Suhu °C ke °F</h1>
+    </header>
 
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Konversi Suhu</title>
+    <!-- Main -->
+    <main>
+      <form action="index.html" method="post" id="calc">
+        <label for="celsius">Celsius (°C):</label>
+        <input type="text" id="celsius" name="celsius" />
+        <label for="fahrenheit">Fahrenheit (°F):</label>
+        <input type="text" id="fahrenheit" name="fahrenheit" />
+        <div class="button">
+          <button type="button" id="reverse">
+            <div class="text">Reverse</div>
+            <div class="overlay"></div>
+          </button>
+          <canvas class="particleCanvas"></canvas>
+        </div>
 
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-    <!-- Header / navbar -->
-     <header class="main-header">
-        <h1>Konversi Suhu</h1>
-     </header>
+        <label for="kalkulasi">Cara Kalkulasi:</label>
+        <input type="text" id="kalkulasi" name="kalkulasi" readonly />
+      </form>
+    </main>
 
-     <!-- main -->
-      <main class="main">
-
-        <!-- Introduksi -->
-        <section>
-            <p>Masukkan suhu derajat Celcius (&deg;C) ke kotak dibawah,
-                lali klik tombol konversi untuk mendapatkan 
-                hasil konversi dalam bentuk Fahrenheit (&deg;F)</p>
-        </section>
-
-        <!-- Form input -->
-        <section>
-            <form>
-
-                <!-- Input  -->
-                <div class="input-grup">
-                    <label for="main-input">Celcius :</label>
-                    <input type="number" id="main-input">    
-                </div>
-
-                <!-- Main Action Button -->
-
-                <div class="">
-                    <button>Konversi</button>
-                    <button>Reset</button>
-                    <button>Reverse</button>
-                </div>
-
-            </form>
-        </section>
-
-        <!-- Hasil Konversi -->
-        <section>
-            <div>
-                <label for="main-result">Fahrenheit : </label>
-                <input type="number" id="main-result" readonly>
-            </div>
-        </section>
-
-        <!-- Cara konversi suhu -->
-        <section>
-            <div>
-                <label for="cara-konversi">Cara Konversi : </label>
-                <input type="number" id="cara-konversi" readonly>
-            </div>
-        </section>
-
-        <!-- Rumus -->
-         <section>
-
-            <header>
-                <h3>Cara Konversi Dari Celcius Ke kontol</h3>
-            </header>
-
-            <hr>
-
-            <article>
-                <p>
-                    Suhu <span>S</span> dalam derajat Fahrenheit (&deg;F) sama dengan bla bla
-                </p>
-
-                <p>S <sub>(&deg;F)</sub> </p>
-
-            </article>
-
-         </section>
-
-      </main>
-
-      <!-- footer -->
-       <footer>
-        
-       </footer>
-
-</body>
+    <!-- Footer -->
+    <footer></footer>
+  </body>
+  <script src="js/script.js"></script>
 </html>
