remove unnesecary object

--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@
 
       <!-- footer -->
        <footer>
-        <p>Created by <a href="https://github.com/HandsomeMichael">HandsomeMichael</a> | Credits </p>
+        <img  src="assets/splat.png" alt="">
+        <p>Created by <a href="https://github.com/HandsomeMichael">HandsomeMichael</a> | <a href="https://github.com/revou-fundamental-course/03-feb-25-HandsomeMichael/tree/main">Source Code</a> </p>
        </footer>
 
 </body>
